@@ -1,0 +1,31 @@
+Threads, Generations, Time
+1, 40960, 24.60647
+1, 49152, 28.285612
+1, 43008, 26.696891
+1, 49152, 29.774986
+1, 51200, 32.134728
+1, 88064, 54.775907
+1, 67584, 42.438762
+1, 69632, 43.547962
+1, 47104, 28.978317
+1, 90112, 56.399207
+1, 40960, 25.428132
+1, 51200, 32.624043
+1, 67584, 41.635025
+1, 55296, 34.347197
+1, 40960, 24.875205
+1, 51200, 31.460146
+1, 30720, 18.457616
+1, 98304, 63.086752
+1, 32768, 20.898131
+1, 47104, 30.34365
+1, 61440, 39.769319
+1, 47104, 29.444657
+1, 45056, 28.193266
+1, 88064, 55.370828
+1, 45056, 28.116838
+1, 43008, 26.195743
+1, 59392, 38.238626
+1, 63488, 40.660267
+1, 63488, 39.661633
+1, 24576, 15.792778
