@@ -1,0 +1,31 @@
+Threads, Generations, Time
+1, 61440, 31.631253
+1, 36864, 18.491047
+1, 65536, 34.313169
+1, 49152, 21.973202
+1, 98304, 51.387587
+1, 73728, 39.394213
+1, 40960, 22.081228
+1, 86016, 44.960837
+1, 45056, 24.173019
+1, 73728, 37.727585
+1, 65536, 33.879298
+1, 61440, 31.871382
+1, 81920, 43.711747
+1, 45056, 23.834359
+1, 69632, 36.186749
+1, 90112, 47.80033
+1, 65536, 34.436432
+1, 90112, 48.038885
+1, 57344, 29.909425
+1, 45056, 23.745427
+1, 77824, 41.427453
+1, 73728, 37.780239
+1, 90112, 48.449287
+1, 57344, 28.758259
+1, 90112, 47.059837
+1, 106496, 56.667632
+1, 57344, 30.993983
+1, 73728, 38.560665
+1, 53248, 27.717531
+1, 49152, 25.947642
