@@ -1,0 +1,31 @@
+Threads, Generations, Time
+1, 73728, 43.250851
+1, 57344, 30.446119
+1, 57344, 35.551464
+1, 81920, 48.43358
+1, 73728, 45.768843
+1, 65536, 36.01594
+1, 81920, 48.840704
+1, 57344, 30.543968
+1, 98304, 57.002203
+1, 65536, 40.728347
+1, 73728, 41.476614
+1, 81920, 49.410725
+1, 57344, 31.657281
+1, 98304, 57.132325
+1, 65536, 36.423867
+1, 73728, 45.460835
+1, 49152, 29.39586
+1, 73728, 42.914759
+1, 73728, 42.031259
+1, 81920, 46.409123
+1, 81920, 50.602961
+1, 81920, 45.449342
+1, 65536, 37.859129
+1, 90112, 52.898217
+1, 65536, 40.778333
+1, 114688, 70.734138
+1, 40960, 24.660956
+1, 98304, 58.051998
+1, 73728, 41.827796
+1, 81920, 47.870157
