@@ -1,0 +1,31 @@
+Threads, Generations, Time
+1, 32768, 20.091143
+1, 64512, 40.311189
+1, 35840, 22.434221
+1, 46080, 28.732373
+1, 47104, 29.317445
+1, 36864, 23.420432
+1, 51200, 32.733055
+1, 33792, 21.210725
+1, 33792, 20.942888
+1, 27648, 17.135915
+1, 35840, 22.904167
+1, 35840, 22.82075
+1, 26624, 17.40704
+1, 56320, 36.583392
+1, 40960, 26.36952
+1, 40960, 26.24296
+1, 22528, 14.196762
+1, 64512, 40.726715
+1, 43008, 26.967254
+1, 48128, 30.824851
+1, 40960, 25.939028
+1, 41984, 26.690374
+1, 35840, 22.475982
+1, 59392, 37.438392
+1, 26624, 17.010612
+1, 31744, 19.792064
+1, 39936, 25.373487
+1, 32768, 20.516071
+1, 34816, 21.989602
+1, 58368, 37.148286
