@@ -1,6 +1,7 @@
 2018-11-15  Juan J. merelo  <jmerelo@penny>
 
 	* utils/pop.R: Analyzing hung experiments, the best average number of evaluations is for pop=512; however, if we look at time it's worse than for pop=256. Too bad. 
+	With pop-128, the max average evaluations per second are achieved, even bigger than for population=512. This does not follow any logical progression... Besides, it takes less time. 
 
 2018-11-11  JJMerelo  <jmerelo@bojack>
 
